<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="yz.android.tribbble.ShotActivity" >

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_open_in_browser"
        android:orderInCategory="200"
        android:title="@string/action_open_in_browser"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_unfavorite"
        android:orderInCategory="300"
        android:title="@string/action_unfavorite"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="400"
        android:title="@string/action_favorite"
        app:showAsAction="never"/>

</menu>
